<resources>
    <!-- Shoptypes: for the shoptype enum pojo in English -->
    <string name="shoptype_grocery">Groceries</string>
    <string name="shoptype_technic">Technicals</string>
    <string name="shoptype_cosmetic">Cosmetics</string>
    <string name="shoptype_cloths">Clothing</string>
    <string name="shoptype_liquor">Liquor and Drinks</string>
    <string name="shoptype_furniture">Furniture</string>
    <string name="shoptype_animals">Animals and Pets</string>
    <string name="shoptype_plants">Plants and Garden stuff</string>
    <string name="shoptype_literature">Literature and Books</string>
    <string name="shoptype_office">Office supplies</string>
    <string name="shoptype_toys">Toys and Children stuff</string>
    <string name="shoptype_building">Building materials</string>
    <string name="shoptype_chemicals">Chemicals</string>
    <string name="shoptype_drugs">Drugs and Pharmaceuticals</string>
    <string name="shoptype_gifts">Gifts and Presents</string>
    <string name="shoptype_media">Media and Entertainment</string>
    <string name="shoptype_services">Services</string>
    <string name="shoptype_vehicles">Vehicles and Transportation</string>
    <string name="shoptype_restaurant">Restaurants and Food</string>
    <string name="shoptype_cafe">Cafes and Bars</string>
    <string name="shoptype_other">Other</string>

    <string name="app_name">What To Buy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_buylists">Buylists</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_assets">Assets</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_settings">Settings</string>
    <string name="shop_list_title">Shops</string>
    <string name="settings_shakeToCheckItems">Use Shake to Check Items</string>
    <string name="exit">Exit</string>
    <string name="dialog_tooltip_title">Tips</string>
    <string name="dialog_tooltip_show_tips_on_startup">Show tips on Startup</string>
    <string name="fragment_edit_buylist">Edit Buylist</string>
    <string name="fragment_create_item">Create Item</string>
    <string name="fragment_delete_buylist">Delete List</string>
    <string name="fragment_delete_checked_items">Delete Checked Items</string>
</resources>
